@@ -11,6 +11,7 @@ sunuo (0.3.2) unstable; urgency=low
     - get server name from Config.ServerName
     - make backup path portable
     - display "SunUO" in UOGInfo packet
+    - use Config.ConfigDirectory
 
  --
 
